--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ nav ul {
     padding: 25px;
 }
 
+@media screen and (max-width: 700px) {
+         nav ul {
+            letter-spacing: 1px;
+            font-size: small;
+         }
+    }
 
 nav a {
     color: white;
@@ -64,6 +70,13 @@ nav a:hover ::after{
     background: url(./img/image-generee-garden-min.jpg)fixed center/cover;
     grid-area: main_part;   
 }
+
+@media screen and (max-width: 700px) {
+         .grid_container{
+             display: flex;
+             flex-direction: column;
+        }
+    }
 
 #fadeIn {
     color: whitesmoke;
@@ -202,3 +215,10 @@ nav a:hover ::after{
     text-transform: uppercase;
     font-weight: 700;
 }
+@media screen and (max-width: 700px) {
+     .footer_container> p {
+         letter-spacing: 1px;
+         font-size: small;
+         margin-left: 1rem;
+     }
+    }
